style: fix search icon overlap in members page

--- a/style.css
+++ b/style.css
@@ -861,7 +861,7 @@ ul {
 
 .search-container input {
     width: 100%;
-    padding: 15px 20px 15px 50px;
+    padding: 15px 20px 15px 65px; /* Increased left padding from 50px to 65px */
     border: 2px solid #eee;
     border-radius: 30px;
     font-size: 1rem;
